<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contactLayout"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="3dp"
    android:background="@drawable/custom_contact">

    <TextView
        android:id="@+id/name"
        android:layout_marginStart="20dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/recycler_item_text" />

    <TextView
        android:id="@+id/number"
        android:text="@string/number"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        style="@style/recycler_item_text" />

    <TextView
        android:id="@+id/email"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/number"
        app:layout_constraintTop_toBottomOf="@+id/number"
        style="@style/recycler_item_text" />
</androidx.constraintlayout.widget.ConstraintLayout>